--- a/index.html
+++ b/index.html
@@ -370,6 +370,7 @@
                         <div class="task-content">
                             <p class="highlight-text">Post your AI project ideas in the Discord project-ideas channel! 🚀</p>
                             <p>Sharing your ideas early, even if they're not perfect, is one of the best ways to refine your AI concept and connect with potential collaborators. Your idea doesn't have to be fully formed! 🌱</p>
+                            <p>💡 <strong>Need inspiration?</strong> You can find examples of previous projects here: <a href="https://vam-nexus.github.io/byai-6/#gallery" target="_blank">Project Gallery</a></p>
                             
                             <h4>📝 Action Items:</h4>
                             <ul class="action-list">
