--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             <div class="nav-dropdown">
                 <select id="section-selector" onchange="showWeek(this.value)">
                     <option value="Week0" selected>Week 0 (Sep 13)</option>
+                     <option value="Week1">Week 1 (Sep 15)</option>
                     <option value="gallery">Video Gallery</option>
                 </select>
             </div>
