--- a/week1.html
+++ b/week1.html
@@ -43,9 +43,9 @@
                         <h2 style="color: rgb(224, 224, 224); width: 80%; text-align: center;">
                             Time to finetune your AI idea and start building! ✨</h2>
                         <h2 style="color: white; width: 80%; text-align: center;">Deadline for Finishing these Tasks<br> <span style="color: #ff6b6b;">Sunday Sep 21, 2025</span> ⏰ </h2>
-                        <h2 style="color: rgb(255, 230, 230); width: 80%; text-align: center; border: 2px solid #ff6b6b; padding: 10px; border-radius: 8px; transition: transform 0.3s ease;">
-                            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank" style="text-decoration: none;">
-                                <span style="color: #ff6b6b;">Watch This Week's Lecture on YouTube</span>
+                        <h2 style="color: rgb(255, 230, 230); width: 80%; text-align: center; border: 2px solid #c2f4f6; padding: 10px; border-radius: 8px; transition: transform 0.3s ease;">
+                            <a href="https://youtu.be/GHc-A3fN86A" target="_blank" style="text-decoration: none;">
+                                <span style="color: #c2f4f6;">Watch This Week's Lecture on YouTube</span>
                             </a>
                         </h2>
                         <style>
