--- a/gallery.html
+++ b/gallery.html
@@ -27,6 +27,7 @@
                 <select id="section-selector" onchange="showWeek(this.value)">
                     <option value="Week0">Week 0 (Sep 13)</option>
                     <option value="Week1">Week 1 (Sep 15)</option>
+                    <option value="Week2">Week 2 (Sep 22)</option>
                     <option value="gallery" selected>Video Gallery</option>
                 </select>
             </div>
