--- a/week0.html
+++ b/week0.html
@@ -28,6 +28,7 @@
                     <option value="Week0" selected>Week 0 (Sep 13)</option>
                      <option value="Week1">Week 1 (Sep 15)</option>
                      <option value="Week2">Week 2 (Sep 22)</option>
+                     <option value="Week3">Week 3 (Sep 29)</option>
                     <option value="gallery">Video Gallery</option>
                 </select>
             </div>
