--- a/week3.html
+++ b/week3.html
@@ -41,13 +41,13 @@
             <div class="main-content">
                 <div id="Week3" style="display: block;">
                      <center>
-                        <h1 style="color: white; width: 80%; text-align: center;">Welcome to week 2 🎯</h1>
+                        <h1 style="color: white; width: 80%; text-align: center;">Welcome to week 3 🎯</h1>
                         <h2 style="color: rgb(224, 224, 224); width: 80%; text-align: center;">
                             Add an AI feature to your App and Deploy your App! ✨</h2>
                         <h2 style="color: white; width: 80%; text-align: center;">Deadline for Finishing these Tasks<br> <span style="color: #ff6b6b;">Sunday Oct 5th, 2025</span> ⏰ </h2>
                         <h2 style="color: rgb(255, 230, 230); width: 80%; text-align: center; border: 2px solid #c2f4f6; padding: 10px; border-radius: 8px; transition: transform 0.3s ease;">
-                            <a href="" target="_blank" style="text-decoration: none;">
-                                <span style="color: #c2f4f6;">[TO BE RELEASED] Watch This Week's Lecture on YouTube</span>
+                            <a href="https://youtu.be/xFV1RQ6xmP4" target="_blank" style="text-decoration: none;">
+                                <span style="color: #c2f4f6;">Watch This Week's Lecture on YouTube</span>
                             </a>
                         </h2>
                         <style>
