--- a/week3.html
+++ b/week3.html
@@ -29,6 +29,7 @@
                     <option value="Week1">Week 1 (Sep 15)</option>
                     <option value="Week2">Week 2 (Sep 22)</option>
                     <option value="Week3" selected>Week 3 (Sep 29)</option>
+                    <option value="Week4">Week 4 (Oct 6)</option>
                     <option value="gallery">Video Gallery</option>
                 </select>
             </div>
