--- a/week4.html
+++ b/week4.html
@@ -47,7 +47,7 @@
                             Incorporate RAG and Data Retrieval to your App! ✨</h2>
                         <h2 style="color: white; width: 80%; text-align: center;">Deadline for Finishing these Tasks<br> <span style="color: #ff6b6b;">Sunday Oct 12th, 2025</span> ⏰ </h2>
                         <h2 style="color: rgb(255, 230, 230); width: 80%; text-align: center; border: 2px solid #c2f4f6; padding: 10px; border-radius: 8px; transition: transform 0.3s ease;">
-                            <a href="https://youtu.be/TBD" target="_blank" style="text-decoration: none;">
+                            <a href="https://youtu.be/KQE8BystLWA" target="_blank" style="text-decoration: none;">
                                 <span style="color: #c2f4f6;">Watch This Week's Lecture on YouTube</span>
                             </a>
                         </h2>
