--- a/week4.html
+++ b/week4.html
@@ -94,7 +94,7 @@
                                 </li>
                                 <li>🎲 <strong>Online Lecture Next Monday</strong> - This lecture will cover final preparations and presentation tips.
                                     <br>📅 Monday, Oct 13 • 6:00 PM - 7:00 PM PDT
-                                    <br>🔗 <a href="https://luma.com/c4eaf77z" target="_blank">RSVP Here</a>
+                                    <br>🔗 <a href="https://luma.com/mob09egu" target="_blank">RSVP Here</a>
                                 </li>
                             </ol>
                         </div>
