--- a/week2.html
+++ b/week2.html
@@ -14,7 +14,7 @@
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
                         <path d="M12 2L1 12h3v9h6v-6h4v6h6v-9h3L12 2zm0 2.5L18.5 11H17v9h-2v-6H9v6H7v-9H5.5L12 4.5z"/>
                     </svg>
-                    Build Your AI in Six Weeks (BYAI-6)
+                    BYAI-6 The 4th
                 </a>
             </div>
             <div id="countdown-timer" style="color: white; font-weight: bold; text-align: center; margin: 0 auto; background: rgba(0,0,0,0.3); padding: 8px 15px; border-radius: 8px; box-shadow: 0 2px 10px rgba(0,0,0,0.2);">
@@ -31,6 +31,7 @@
                     <option value="Week3">Week 3 (Sep 29)</option>
                     <option value="Week4">Week 4 (Oct 6)</option>
                     <option value="gallery">Video Gallery</option>
+                    <option value="projects">Projects</option>
                 </select>
             </div>
         </div>
