--- a/projects.html
+++ b/projects.html
@@ -30,6 +30,7 @@
                     <option value="Week2">Week 2 (Sep 22)</option>
                     <option value="Week3">Week 3 (Sep 29)</option>
                     <option value="Week4">Week 4 (Oct 6)</option>
+                    <option value="Week5">Week 5 (Oct 13)</option>
                     <option value="gallery">Video Gallery</option>
                     <option value="projects" selected>Projects</option>
                 </select>
