--- a/week5.html
+++ b/week5.html
@@ -164,8 +164,8 @@
                             <ol class="action-list">
                                 <li>👍👎 <strong>Add feedback system:</strong> Implement thumbs up/thumbs down buttons for user outputs in your app interface</li>
                                 <li>📁 <strong>Create outputs folder:</strong> Set up an <code>outputs/</code> directory to store feedback examples</li>
-                                <li>✅ <strong>Collect 2 thumbs up outputs:</strong> Save 2 high-quality outputs that users rated positively (include input, output, and timestamp)</li>
-                                <li>❌ <strong>Collect 2 thumbs down outputs:</strong> Save 2 problematic outputs that users rated negatively (include input, output, and reason for negative feedback)</li>
+                                <li>✅ <strong>Collect 2 thumbs up outputs (save them in <code>outputs/</code>):</strong> Save 2 high-quality outputs that users rated positively (include input, output, and timestamp)</li>
+                                <li>❌ <strong>Collect 2 thumbs down outputs (save them in <code>outputs/</code>):</strong> Save 2 problematic outputs that users rated negatively (include input, output, and reason for negative feedback)</li>
                                 <li>📤 <strong>Share your feedback collection:</strong> Push your outputs folder to GitHub and share the GitHub URL link in <a href="https://discord.com/channels/1413524932213735567/1427375560501362698" target="_blank">this Discord thread</a></li>
                             </ol>
                         </div>
