--- a/week5.html
+++ b/week5.html
@@ -49,8 +49,8 @@
                             Test Your App with Unit Tests and LLM Testing! ✨</h2>
                         <h2 style="color: white; width: 80%; text-align: center;">Deadline for Finishing these Tasks<br> <span style="color: #ff6b6b;">Sunday Oct 19th, 2025</span> ⏰ </h2>
                         <h2 style="color: rgb(255, 230, 230); width: 80%; text-align: center; border: 2px solid #c2f4f6; padding: 10px; border-radius: 8px; transition: transform 0.3s ease;">
-                            <a href="#" target="_blank" style="text-decoration: none;">
-                                <span style="color: #c2f4f6;">Watch This Week's Lecture on YouTube (Coming Soon)</span>
+                            <a href="https://youtu.be/RIFGN5zdbSY" target="_blank" style="text-decoration: none;">
+                                <span style="color: #c2f4f6;">Watch This Week's Lecture on YouTube</span>
                             </a>
                         </h2>
                         <style>
