--- a/week5.html
+++ b/week5.html
@@ -94,10 +94,10 @@
                             
                             <h4>📝 Choose Your Facilitator:</h4>
                             <ol class="action-list">
-                                <li>👨‍💻 <strong>Farias</strong> - <a href="https://calendly.com/farias-murilo/30min" target="_blank">Book with Farias</a></li>
-                                <li>👩‍💻 <strong>Helena</strong> - <a href="https://calendly.com/helena-v-88/bai-6-with-helena" target="_blank">Book with Helena</a></li>
-                                <li>👨‍💻 <strong>Pawel</strong> - <a href="https://calendly.com/pawel-z/byai6" target="_blank">Book with Pawel</a></li>
-                                <li>👨‍💻 <strong>Issam</strong> - <a href="https://calendly.com/issam-laradji-uhp1/30min?month=2025-09" target="_blank">Book with Issam</a></li>
+                                <li>👨‍💻 <strong>Farias</strong> - <a href="https://calendly.com/farias-murilo/30min" target="_blank">https://calendly.com/farias-murilo/30min</a></li>
+                                <li>👩‍💻 <strong>Helena</strong> - <a href="https://calendly.com/helena-v-88/bai-6-with-helena" target="_blank">https://calendly.com/helena-v-88/bai-6-with-helena</a></li>
+                                <li>👨‍💻 <strong>Pawel</strong> - <a href="https://calendly.com/pawel-z/byai6" target="_blank">https://calendly.com/pawel-z/byai6</a></li>
+                                <li>👨‍💻 <strong>Issam</strong> - <a href="https://calendly.com/issam-laradji-uhp1/30min?month=2025-09" target="_blank">https://calendly.com/issam-laradji-uhp1/30min?month=2025-09</a></li>
                             </ol>
                             
                         </div>
