--- a/projects.html
+++ b/projects.html
@@ -189,7 +189,7 @@
                         <div class="project-item">
                             <h4>16) App by Yunus</h4>
                             <div class="project-image">
-                                <img src="project_landing_pages/math_cs - Yunus.webp" alt="Project landing page">
+                                <img src="project_landing_pages/math_cs - Yunus Tuncbilek.webp" alt="Project landing page">
                             </div>
                         </div>
                         
