--- a/index.html
+++ b/index.html
@@ -25,12 +25,13 @@
             </div>
             <div class="nav-dropdown">
                 <select id="section-selector" onchange="showWeek(this.value)">
-                    <option value="Week0" selected>Week 0 (Sep 13)</option>
+                    <option value="Week0">Week 0 (Sep 13)</option>
                      <option value="Week1">Week 1 (Sep 15)</option>
                      <option value="Week2">Week 2 (Sep 22)</option>
                      <option value="Week3">Week 3 (Sep 29)</option>
                      <option value="Week4">Week 4 (Oct 6)</option>
                      <option value="Week5">Week 5 (Oct 13)</option>
+                     <option value="Week6" selected>Week 6 (Nov 2)</option>
                     <option value="gallery">Video Gallery</option>
                     <option value="projects">Projects</option>
                 </select>
